# demarches-simpy

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: test-python.yml
demarches_simp/: connection.py  data_interface.py  demarche.py  dossier.py
demarches_simp/query/: dossier_data.graphql
docs/: conf.py  index.rst  installation-guide.rst  requirements.txt
docs/_static/: style.css
docs/contents/: action.rst  filtered_dossiers.rst  getting_started.rst  installation.rst  simple_program.rst
docs/contents/getting_started_exemple/: a_simple_program.py  action.py  filtered_dossier.py
docs/refs/: demarches_simpy.actions.rst  demarches_simpy.connection.rst  demarches_simpy.data_interface.rst  demarches_simpy.demarche.rst  demarches_simpy.dossier.rst  demarches_simpy.fields.rst  demarches_simpy.interfaces.rst  demarches_simpy.rst  demarches_simpy.utils.rst
src/demarches_simpy/: __init__.py  actions.py  connection.py  data_interface.py  demarche.py  dossier.py  fields.py  interfaces.py  utils.py
src/demarches_simpy/query/: actions.graphql  demarche.graphql  dossier_data.graphql  fields.graphql  send_message.graphql
tests/: fake_api.py  requirements.txt  test_actions_api_func.py  test_api.py  test_api_unit.py  test_dossier.py  test_fields_unit.py  test_obj_unit.py  test_utils.py
