[build-system]
requires = ["setuptools>=61.0","requests"]
build-backend = "setuptools.build_meta"
[project]
name = "demarches-simpy"
version = "0.0.18"
authors = [
  { name="Esteban Rodriguez (Z3ZEL)", email="contact@rodriguez-esteban.com" },
]
description = "A simple python wrapper for the demarches-simplifiees.fr API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests',
  'shapely >= 2.0.1',
  'pytz',
]

[project.urls]
"Homepage" = "https://github.com/Z3ZEL/demarches-simplifiees"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"